# hft_patterns

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: affinity.hpp  arena_allocator.hpp  branch_reduction.hpp  cache_warming.hpp  curiously_recurring_template_pattern.hpp  hazard_pointer.hpp  hazard_pointer_raii.hpp  lock_free.hpp  lock_free_linked_list.hpp  main.cpp  michael_scott_queue.hpp  mpmc_queue.hpp  pool_allocator.hpp  prefetch.hpp  simd.hpp  vos_vs_sov.hpp
